--- a/app/views/readings/index.erb
+++ b/app/views/readings/index.erb
@@ -13,43 +13,63 @@
 </tr>
 <% end %>
 </table>
-<canvas id="tempChart" width="1440" height="502" style="width: 720px; height: 251px;"></canvas>
+<canvas id="tempChart" width="1024" height="500"></canvas>
 <script>
     var ctx = document.getElementById("tempChart");
     var tempChart = new Chart(ctx, {
         type: 'line',
         animation:{
-            animateScale:true
+            animateScale: false
         },
         data: {
             labels: [ "<%= @readings.map(&:date).join("\", \"") %>" ],
-            datasets: [
-              {
+            datasets: [{
                 label: 'Indoor',
-                data: '[ "<%= @readings.map(&:indoor_temperature).join("\", \"") %>" ]',
-                fill: false,
-                borderJoinStyle: 'miter',
-                backgroundColor: 'rgba( 73, 174, 163, 0.2)',
-                borderColor:     'rgba( 73, 174, 163, 0.2)',
+                backgroundColor: 'rgba( 255, 96, 120, 1)',
+                borderColor:     'rgba( 255, 96, 120, 1)',
+                data: [ "<%= @readings.map(&:indoor_temperature).join("\", \"") %>" ],
                 borderWidth: 1,
-                showLine: true
+                showLine: true,
+                fill: false
               },
               {
                 label: 'Outdoor',
-                data: '[ "<%= @readings.map(&:outdoor_temperature).join("\", \"") %>"" ]',
-                backgroundColor: 'rgba(  73, 174, 163, 0.2)',
-                borderColor:     'rgba(  73, 174, 163, 0.2)',
+                backgroundColor: 'rgba(  81, 125, 255, 1)',
+                borderColor:     'rgba(  81, 125, 255, 1)',
+                data: [ "<%= @readings.map(&:outdoor_temperature).join("\", \"") %>" ],
                 borderWidth: 1,
-                showLine: true
-              }
-            ]
+                showLine: true,
+                fill: false
+              }]
         },
         options: {
-            maintainAspectRatio: false,
+            responsive: true,
+            title:{
+              display:true,
+              text:'Temperature Readings'
+            },
+            legend: {
+            display: true,
+            labels: {
+              fontColor: 'rgb(255, 99, 132)'
+             }
+            },
             scales: {
+              xAxes: [{
+                display: true,
+                scaleLabel: {
+                  display: true,
+                  labelString: 'Date'
+                }
+              }],
               yAxes: [{
+                display: true,
+                scaleLabel: {
+                  display: true,
+                  labelString: "Deg C",
+                },
                 ticks: {
-                    beginAtZero:true
+                  beginAtZero:true
                 },
                 min: -5,
                 steps: 1,
