--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,12 +4,13 @@
   <meta charset="utf-8" />
   <title>Firelog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/stylesheets/main.css" />
+  <link rel="stylesheet" href="/stylesheets/bootstrap.css" />
+  <link rel="stylesheet" href="/stylesheets/site.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.js"></script>
 </head>
 <body>
   <div class="wrapper">
-    <div class="main">
+    <div class="row">
       <%= yield %>
     </div>
 
