--- a/app/views/readings/new.erb
+++ b/app/views/readings/new.erb
@@ -1,4 +1,4 @@
-<form action="/readings" method="POST">
+<form action="/readings/new" method="POST">
     Date: <input type="datetime" name="date">
     <br/>
     Indoor: <input type="decimal" name="indoor_temperature">
