--- a/app/views/readings/index.erb
+++ b/app/views/readings/index.erb
@@ -1,5 +1,10 @@
 <div class="col-lg-12">
   <h1>Readings</h1>
+  <form action="/readings" method="GET">
+    Start: <input type="datetime" name="start" value="<%= @start.strftime("%Y%m%d") %>" class="datepicker">
+    End: <input type="datetime" name="end" value="<%= @end.strftime("%Y%m%d") %>" class="datepicker">
+    <input type="submit">
+  </form>
   <canvas id="tempChart" width="800" height="350"></canvas>
   <table>
   <tr>
