--- a/app/views/readings/index.erb
+++ b/app/views/readings/index.erb
@@ -16,8 +16,8 @@
   <% @readings.each do |reading| %>
   <tr>
     <td><%= reading.date.to_datetime %></td>
-    <td><%= reading.indoor_temperature.round(1).to_s + "&deg;C" %></td>
-    <td><%= reading.outdoor_temperature.round(1).to_s + "&deg;C" %></td>
+    <td><%= reading.indoor_temperature.round(1).to_s %></td>
+    <td><%= reading.outdoor_temperature.round(1).to_s %></td>
     <td><%= yes_no(reading.status) unless reading.status.nil? %></td>
   </tr>
   <% end %>
@@ -36,22 +36,39 @@
             labels: [ "<%= @readings.map {|d| d.date.to_datetime}.join("\", \"") %>" ],
             datasets: [{
                 label: 'Indoor',
+                type: 'line',
                 backgroundColor: 'rgba( 255, 96, 120, 1)',
                 borderColor:     'rgba( 255, 96, 120, 1)',
                 data: [ "<%= @readings.map(&:indoor_temperature).join("\", \"") %>" ],
+                yAxisID: 'A',
                 borderWidth: 1,
                 showLine: true,
                 fill: false
               },
               {
                 label: 'Outdoor',
+                type: 'line',
                 backgroundColor: 'rgba(  81, 125, 255, 1)',
                 borderColor:     'rgba(  81, 125, 255, 1)',
                 data: [ "<%= @readings.map(&:outdoor_temperature).join("\", \"") %>" ],
+                yAxisID: 'A',
                 borderWidth: 1,
                 showLine: true,
                 fill: false
-              }]
+              },
+              {
+                label: 'State',
+                type: 'line',
+                backgroundColor: 'rgba(  234, 234, 234, 0.8)',
+                borderColor:     'rgba(  234, 234, 234, 0.8)',
+                data: [ "<%= @readings.map(&:status).map(&:to_i).join("\", \"") %>" ],
+                yAxisID: 'B',
+                borderWidth: 1,
+                showLine: true,
+                fill: true,
+                stepped: true
+              }
+            ]
         },
         options: {
             responsive: true,
@@ -78,6 +95,8 @@
                 }
               }],
               yAxes: [{
+                id: 'A',
+                position: 'left',
                 display: true,
                 scaleLabel: {
                   display: true,
@@ -86,7 +105,21 @@
                 ticks: {
                   beginAtZero:true
                 }
-              }]
+              },
+              {
+                id: 'B',
+                position: 'right',
+                display: true,
+                scaleLabel: {
+                  display: true,
+                  labelString: "State",
+                },
+                ticks: {
+                  max: 1,
+                  min: 0
+                }
+              }
+              ]
             }
         }
     });
