--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -34,7 +34,7 @@
       </div>
     </div>
   </nav>
-  <div class="wrapper">
+  <div class="container">
     <div class="row">
       <%= yield %>
     </div>
