--- a/app/views/readings/index.erb
+++ b/app/views/readings/index.erb
@@ -1,27 +1,32 @@
-<div class="col-lg-12">
-  <h1>Readings</h1>
-  <form action="/readings" method="GET">
-    Start: <input type="datetime" name="start" value="<%= @start.strftime("%Y%m%d") %>" class="datepicker">
-    End: <input type="datetime" name="end" value="<%= @end.strftime("%Y%m%d") %>" class="datepicker">
-    <input type="submit">
-  </form>
-  <canvas id="tempChart" width="800" height="350"></canvas>
-  <table>
-  <tr>
-    <th>Date</th>
-    <th>Indoor</th>
-    <th>Outhoor</th>
-    <th>State</th>
-  </th>
-  <% @readings.each do |reading| %>
-  <tr>
-    <td><%= reading.date.to_datetime %></td>
-    <td><%= reading.indoor_temperature.round(1).to_s %></td>
-    <td><%= reading.outdoor_temperature.round(1).to_s %></td>
-    <td><%= yes_no(reading.status) unless reading.status.nil? %></td>
-  </tr>
-  <% end %>
-  </table>
+  <div class="col-lg-12">
+    <h1>Readings</h1>
+    <form action="/readings" method="GET">
+      Start: <input type="datetime" name="start" value="<%= @start.strftime("%Y%m%d") %>" class="datepicker">
+      End: <input type="datetime" name="end" value="<%= @end.strftime("%Y%m%d") %>" class="datepicker">
+      <input type="submit">
+    </form>
+    <canvas id="tempChart" width="800" height="350"></canvas>
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-10">
+    <table>
+    <tr>
+      <th>Date</th>
+      <th>Indoor</th>
+      <th>Outhoor</th>
+      <th>State</th>
+    </th>
+    <% @readings.each do |reading| %>
+    <tr>
+      <td><%= reading.date.to_datetime %></td>
+      <td><%= reading.indoor_temperature.round(1).to_s %></td>
+      <td><%= reading.outdoor_temperature.round(1).to_s %></td>
+      <td><%= yes_no(reading.status) unless reading.status.nil? %></td>
+    </tr>
+    <% end %>
+    </table>
+  </div>
 </div>
 
 <script>
