Adjusting date format

--- a/app/views/readings/index.erb
+++ b/app/views/readings/index.erb
@@ -37,7 +37,7 @@
             animateScale: false
         },
         data: {
-            labels: [ "<%= @readings.map {|d| d.date.to_datetime}.join("\", \"") %>" ],
+            labels: [ "<%= @readings.map {|d| d.date.strftime("%d-%b %H:%M")}.join("\", \"") %>" ],
             datasets: [{
                 label: 'Indoor',
                 type: 'line',
@@ -46,6 +46,7 @@
                 data: [ "<%= @readings.map(&:indoor_temperature).join("\", \"") %>" ],
                 yAxisID: 'A',
                 borderWidth: 1,
+                pointRadius: 2,
                 showLine: true,
                 fill: false
               },
@@ -57,6 +58,7 @@
                 data: [ "<%= @readings.map(&:outdoor_temperature).join("\", \"") %>" ],
                 yAxisID: 'A',
                 borderWidth: 1,
+                pointRadius: 2,
                 showLine: true,
                 fill: false
               },
@@ -68,9 +70,11 @@
                 data: [ "<%= @readings.map(&:status).map(&:to_i).join("\", \"") %>" ],
                 yAxisID: 'B',
                 borderWidth: 1,
+                pointStyle: 'circle',
+                pointRadius: 0,
                 showLine: true,
                 fill: true,
-                stepped: true
+                steppedLine: true
               }
             ]
         },
