Table date format

--- a/app/views/readings/index.erb
+++ b/app/views/readings/index.erb
@@ -19,7 +19,7 @@
     </th>
     <% @readings.each do |reading| %>
     <tr>
-      <td><%= reading.date.to_datetime %></td>
+      <td><%= reading.date.strftime('%d-%b %H:%M') %></td>
       <td><%= reading.indoor_temperature.round(1).to_s %></td>
       <td><%= reading.outdoor_temperature.round(1).to_s %></td>
       <td><%= yes_no(reading.status) unless reading.status.nil? %></td>
