--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,17 +17,22 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
         <a class="navbar-brand" href="#">Firelog</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar">
         <li class="dropdown">
-          <a href="/readings" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Readings <span class="caret"></span></a>
-          <ul class="dropdown-menu">
             <li><%= link_to 'Last day', '/readings' %></li>
             <li><%= link_to 'Last 3 days', '/readings?days=3' %></li>
             <li><%= link_to 'Last week', '/readings?days=7' %></li>
             <li><%= link_to 'Last month', '/readings?days=30' %></li>
+            <li><%= link_to 'All time', '/readings?days=99999' %></li>
           </ul>
         </li>
       </ul>
