Fixes bootstrap menu

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -26,13 +26,13 @@
         <a class="navbar-brand" href="#">Firelog</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar">
+      <ul class="nav navbar-nav">
         <li class="dropdown">
             <li><%= link_to 'Last day', '/readings' %></li>
             <li><%= link_to 'Last 3 days', '/readings?days=3' %></li>
             <li><%= link_to 'Last week', '/readings?days=7' %></li>
             <li><%= link_to 'Last month', '/readings?days=30' %></li>
-            <li><%= link_to 'All time', '/readings?days=99999' %></li>
+            <li><%= link_to 'All time', '/readings?days=99999'  %></li>
           </ul>
         </li>
       </ul>
