--- a/app/views/readings/index.erb
+++ b/app/views/readings/index.erb
@@ -11,21 +11,32 @@
 <div class="row">
   <div class="col-lg-10">
     <table>
-    <tr>
-      <th>Date</th>
-      <th>Indoor</th>
-      <th>Outhoor</th>
-      <th>State</th>
-    </th>
+      <thead>
+      <tr>
+        <th>Date</th>
+        <th>Indoor</th>
+        <th>Outhoor</th>
+        <th>State</th>
+      </tr>
+    </thead>
+    <tbody>
     <% @readings.each do |reading| %>
     <tr>
-      <td><%= reading.date.strftime('%d-%b %H:%M') %></td>
+      <td><%= reading.date.strftime('%d %b %Y, %H:%M') %></td>
       <td><%= reading.indoor_temperature.round(1).to_s %></td>
       <td><%= reading.outdoor_temperature.round(1).to_s %></td>
       <td><%= yes_no(reading.status) unless reading.status.nil? %></td>
     </tr>
     <% end %>
-    </table>
+  </tbody>
+  <tfoot>
+    <tr>
+      <td>Total</td>
+      <td style="text-align:right;" colspan="2"><%= @readings.count %></td>
+      <td></td>
+    </tr>
+  </tfoot>
+  </table>
   </div>
 </div>
 
